--- a/templates/survey_start.html
+++ b/templates/survey_start.html
@@ -3,7 +3,5 @@
 {% block content %}
 <h1>{{survey_title}}</h1>
 <p>{{survey_instructions}}</p>
-<form action='/questions/0'>
-    <button>Start Survey</button>
-</form>
+<a href='/questions/{{question_number}}'>Start Survey</a>
 {% endblock %}
