--- a/templates/end_survey.html
+++ b/templates/end_survey.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block title%}Thank You!{% endblock%}
 {% block content %}
+{% for msg in get_flashed_messages() %}
+<p>{{msg}}</p>
+{% endfor %}
 <h1>Thank you!</h1>
 <p>Thank you for taking our survey!</p>
+<p>Your responses:</p>
+{% for answer in responses %}
+<p>{{answer}}</p>
+{% endfor %}
 {% endblock %}
