--- a/templates/survey_start.html
+++ b/templates/survey_start.html
@@ -3,5 +3,7 @@
 {% block content %}
 <h1>{{survey_title}}</h1>
 <p>{{survey_instructions}}</p>
-<a href='/questions/{{question_number}}'>Start Survey</a>
+<form method='POST' action='/session-setup'>
+    <button>Start Survey</button>
+</form>
 {% endblock %}
